feature/25-View_and_Download_PDFs_on_PDP_extended: Added PDF mobile styles.

--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
@@ -579,7 +579,7 @@ $tabs-border-width-active: rem(5px);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 
-    @include media('<lg') {
+    @include media('<md') {
       grid-template-columns: 1fr;
       margin-bottom: 6rem;
     }
@@ -587,7 +587,7 @@ $tabs-border-width-active: rem(5px);
     .product-pdf {
       max-width: 300px;
 
-      @include media('<lg') {
+      @include media('<md') {
         margin-top: 2rem;
       }
 
