feature/25-View_and_Download_PDFs_on_PDP_extended: Got it all working.

--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -142,7 +142,14 @@
 
         {{ page_top_products_features }}
 
-        <span class="more-features-link"><a href="#features">See More Features</a></span>
+        <div class="more-links">
+          <span class="more-features-link">
+            <a href="#features">{{ 'See More Features'|t }}</a>
+          </span>
+            <span class="additional-resources-link">
+            <a href="#additional-resources">{{ 'See Additional Resources'|t }}</a>
+          </span>
+        </div>
       </div>
     </div>
 
@@ -202,30 +209,6 @@
               </div>
 
               {{ content.field_product_specifications }}
-
-              {% if pdfs is not null %}
-                <div class="product-pdfs">
-                  <div class="node--type-product__accordion-content-header">
-                    {{ 'Additional Resources'|t }}
-                  </div>
-
-                  <div class="pdf-list">
-                    {% for pdf in pdfs %}
-                      <div class="product-pdf">
-                        <a href="{{ pdf['uri'] }}" target="_blank">
-                          <div class="pdf-icon">
-                            <img src="/{{ base_path ~ directory }}/icons/pdf.svg"  alt="{{ 'PDF'|t }}" width="57" height="64"/>
-                          </div>
-                          <div class="pdf-info">
-                            <div class="row">{{ pdf['name'] }}</div>
-                            <div class="row download">{{ 'Download'|t }}</div>
-                          </div>
-                        </a>
-                      </div>
-                    {% endfor %}
-                  </div>
-                </div>
-              {% endif %}
             </div>
           </section>
 
@@ -248,6 +231,29 @@
           </section>
         </div>
       </div>
+
+      {% if pdfs is not null %}
+        <a role="presentation" id="additional-resources"></a>
+        <div class="product-pdfs">
+          <h4>{{ 'Additional Resources'|t }}</h4>
+
+          <div class="pdf-list">
+            {% for pdf in pdfs %}
+              <div class="product-pdf">
+                <a href="{{ pdf['uri'] }}" target="_blank">
+                  <div class="pdf-icon">
+                    <img src="/{{ base_path ~ directory }}/icons/pdf.svg"  alt="{{ 'PDF'|t }}" width="57" height="64"/>
+                  </div>
+                  <div class="pdf-info">
+                    <div class="row">{{ pdf['name'] }}</div>
+                    <div class="row download">{{ 'Download'|t }}</div>
+                  </div>
+                </a>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      {% endif %}
 
       {% if related_items %}
         <div class="node--type-product-related-products__nav-wrapper">
