--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
@@ -245,7 +245,6 @@ $tabs-border-width-active: rem(5px);
             padding: 0 2rem;
           }
 
-
           // Performance Device
           &::after {
             background-color: $black;
@@ -455,8 +454,7 @@ $tabs-border-width-active: rem(5px);
               }
             }
 
-            .product-set-components,
-            .product-pdfs {
+            .product-set-components {
               margin-top: 4rem;
 
               .node__sku {
