--- a/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
@@ -167,7 +167,14 @@
 
         {{ page_top_products_features }}
 
-        <span class="more-features-link"><a href="#features">{{ 'See More Features'|t }}</a> </span>
+        <div class="more-links">
+          <span class="more-features-link">
+            <a href="#features">{{ 'See More Features'|t }}</a>
+          </span>
+          <span class="additional-resources-link">
+            <a href="#additional-resources">{{ 'See Additional Resources'|t }}</a>
+          </span>
+        </div>
       </div>
     </div>
 
@@ -250,7 +257,30 @@
         </div>
       </div>
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components', 'body') }}
+      {% if pdfs is not null %}
+        <a role="presentation" id="additional-resources"></a>
+        <div class="product-pdfs">
+          <h4>{{ 'Additional Resources'|t }}</h4>
+
+          <div class="pdf-list">
+            {% for pdf in pdfs %}
+              <div class="product-pdf">
+                <a href="{{ pdf['uri'] }}" target="_blank">
+                  <div class="pdf-icon">
+                    <img src="/{{ base_path ~ directory }}/icons/pdf.svg"  alt="{{ 'PDF'|t }}" width="57" height="64"/>
+                  </div>
+                  <div class="pdf-info">
+                    <div class="row">{{ pdf['name'] }}</div>
+                    <div class="row download">{{ 'Download'|t }}</div>
+                  </div>
+                </a>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+      {% endif %}
+
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components', 'body', 'field_pdfs') }}
 
       {% if related_items %}
         <div class="node--type-product-related-products__nav-wrapper">
