--- a/source/themes/custom/crescenttool_au/styles/libraries/region/footer.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/region/footer.scss
@@ -86,6 +86,17 @@ $footer-bp-mobile: '<sm';
           padding-top: rem(10px);
         }
       }
+
+      .block-footer-navigation-block__footer-copyright {
+        margin-top: rem(10px);
+        font-size: rem(14px);
+      }
+
+      @include media('>lg-plus') {
+        .block-footer-navigation-block__footer-address-social-menu-container {
+          max-width: rem(195px);
+        }
+      }
     }
   }
 
@@ -381,6 +392,10 @@ $footer-bp-mobile: '<sm';
 
           .block-footer-navigation-block__footer-social-menu-wrapper {
             order: 2;
+          }
+
+          .block-footer-navigation-block__footer-copyright {
+            order: 3;
           }
         }
 
