added margin bottom to sata footer copyright

--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -439,16 +439,13 @@ $footer-margin-top: 5em;
 
           .block-footer-navigation-block__footer-copyright {
             order: 3;
+            margin-bottom: rem(20px);
           }
         }
 
         .block-footer-navigation-block__footer-menu-wrapper {
           @include container-full-width();
           order: 2;
-        }
-
-        .block-footer-navigation-block__footer-copyright {
-          order: 3;
         }
       }
     }
