Added PS account and reviews keys fields, added to ignore configs, removed where to buy generic/product key logic, updated templates with product, generic, reviews variables

--- a/docroot/modules/custom/price_spider_where_to_buy/templates/block--price-spider-where-to-buy.html.twig
+++ b/docroot/modules/custom/price_spider_where_to_buy/templates/block--price-spider-where-to-buy.html.twig
@@ -27,5 +27,5 @@
 #}
 
 <div class="block-pricespider-generic-widget-block">
-  <div class="ps-widget" ps-sku=""></div>
+  <div class="ps-widget" ps-sku="" ps-config="{{ price_spider_generic_key }}"></div>
 </div>
