--- a/docroot/modules/custom/sata_core/templates/gw--product-buy-now-sticky.html.twig
+++ b/docroot/modules/custom/sata_core/templates/gw--product-buy-now-sticky.html.twig
@@ -20,7 +20,7 @@
     </div>
     <footer>
       <div class="sku sku--desktop"><p>{{ sku }}</p></div>
-      <div class="node__buy-now-button ps-widget" ps-sku="{{sku}}"></div>
+      <div class="node__buy-now-button ps-widget" ps-config="{{ price_spider_product_key }}" ps-sku="{{sku}}"></div>
     </footer>
   </div>
 </div>
