--- a/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
@@ -148,7 +148,7 @@
 
           <div class="product-detail-content-container__rating-container">
             <!--Price Spider Rating widget goes here-->
-            <div class="node__buy-now-button ps-widget" ps-sku="{{ sku }}"></div>
+            <div class="node__buy-now-button ps-widget" ps-config="{{ price_spider_product_key }}" ps-sku="{{ sku }}"></div>
           </div>
 
           <div class="product-detail-content-container__print">
@@ -248,7 +248,7 @@
               </div>
 
               <div class="node--type-product__ps-reviews-container">
-                <div class="ps-widget" ps-config="5d66ebae332829002b90e9f3" ps-sku="{{ sku }}"></div>
+                <div class="ps-widget" ps-config="{{ price_spider_reviews_key }}" ps-sku="{{ sku }}"></div>
               </div>
 
               <div data-bv-show="reviews" data-bv-product-id="{{ sku }}"></div>
