fixed indentation GW AU Footer css, added conditional with css for PS reviews to hide

--- a/source/themes/custom/sata/styles/base/_base.scss
+++ b/source/themes/custom/sata/styles/base/_base.scss
@@ -207,6 +207,7 @@ body.price-spider-hide .page .node--type-product.node--view-mode-full  #reviews-
   display: none !important;
 }
 
-body.price-spider-hide .page .node--type-product.node--view-mode-full .node__content .node--type-product-tabs.node--type-product-tabs--horizontal .node--type-product-tabs__nav-wrapper > .node--type-product-tabs__nav {
+body.price-spider-hide .page .node--type-product.node--view-mode-full .node__content .node--type-product-tabs.node--type-product-tabs--horizontal .node--type-product-tabs__nav-wrapper > .node--type-product-tabs__nav,
+body .page .node--type-product.node--view-mode-full .node__content .node--type-product-tabs.node--type-product-tabs--horizontal .node--type-product-tabs__nav-wrapper > .node--type-product-tabs__nav-no-reviews {
   @include flex-x(justify-content, space-around);
 }
