--- a/source/themes/custom/sata/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product.scss
@@ -183,7 +183,8 @@ $tabs-border-width-active: rem(5px);
       .product-detail-content-container__rating-container {
         margin: rem(26px) 0;
 
-        .node__buy-now-button {
+        .node__buy-now-button,
+        .node__buy-now-button-generic a {
           @include btn(solar);
 
           display: inline-block !important;
