--- a/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
@@ -112,7 +112,8 @@
     }
   }
 
-  .node__buy-now-button {
+  .node__buy-now-button,
+  .node__buy-now-button-generic a {
     @include btn(solar);
 
     box-sizing: border-box;
