--- a/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
@@ -178,7 +178,8 @@
           }
         }
 
-        .ps-widget {
+        .ps-widget,
+        .node__buy-now-button-generic a {
           @include btn(solar);
 
           float: unset;
