Completed the mega menu for camobell.

--- a/source/themes/custom/campbell/styles/base/_form.scss
+++ b/source/themes/custom/campbell/styles/base/_form.scss
@@ -10,12 +10,16 @@
 
     input {
       position: absolute;
-      top: 26%;
+      top: 30%;
       left: 5px;
       right: 0;
-      width: 145px;
+      width: 143px;
       height: 10px;
       margin: auto;
+      border: 0;
+      padding: 1px;
+      font-size: 10px;
+      color: $black;
     }
   }
 
