--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -10,6 +10,7 @@ $lighter-gray: #666666;
 $white: #FFFFFF;
 $pantone: #19975D;
 $menu-hover: #384E53;
+$hamburger-menu: #2B2B30;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
